# persona-exploration

./: .gitignore  .jupyter_ystore.db-journal  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  pyproject.toml
CommentPersona/: agent.py  persona.py
GrammarPersona/: agent.py  persona.py
persona_exploration/: agent.py  persona.py
