[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-exploration"
version = "0.1.0"
description = "A Jupyter AI persona for exploring collaborative notebook interactions."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
keywords = ["jupyter", "persona", "ai", "notebooks", "collaboration"]

authors = [{ name = "Abigayle Mercer", email = "abigayle@example.com" }]
maintainers = [{ name = "Abigayle Mercer", email = "abigayle@example.com" }]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["jupyter-ai"]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[project.urls]
"Homepage" = "https://github.com/abigaylemercer/persona-exploration"
"Bug Reports" = "https://github.com/abigaylemercer/persona-exploration/issues"
"Funding" = "https://donate.pypi.org"
"Say Thanks!" = "http://saythanks.io/to/abigayle"
"Source" = "https://github.com/abigaylemercer/persona-exploration"

[tool.setuptools]
# Adjust package name if needed
package-data = { "persona_exploration" = ["*.dat"] }

[project.entry-points."jupyter_ai.personas"]
# Replace with your actual persona class path
explorer = "persona_exploration.persona:GrammarEditor"
